# django-boilerplate

./: README.md  pyproject.toml  requirements.txt
src/config/: settings.py  urls.py
